repositories {
    mavenCentral()
    google()
}

apply plugin: "java-library"
apply plugin: "eclipse"
apply plugin: "idea"

dependencies {
    implementation files('libs/flatlaf-3.4.1.jar')
    implementation files('libs/jSystemThemeDetector-3.9.1.jar')
}

compileJava {
    options.release = 17
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

project.ext.appName = "PokeMMO"
project.ext.mainClassName = "com.pokeemu.unix.UnixInstaller"
project.ext.mainJar = "unix-installer.jar"

// creates a slim JDK runtime for distribution
task createRuntime(type: Exec) {
    doFirst() {
        project.delete("${buildDir}/runtime")
    }

    String runtimePath = "${buildDir}/runtime"
    String jlinkPath = "$System.env.JRE_TARGET" + "/bin/jlink"

    workingDir project.projectDir
    commandLine = [
            jlinkPath,
            '--add-modules', 'java.se,java.base,java.desktop,jdk.unsupported,jdk.crypto.ec',
            '--strip-debug',
            '--no-header-files',
            '--no-man-pages',
            "--vm=server",
            "--compress=2",
            '--output', runtimePath
    ]
}

jar {
    archiveFileName = project.mainJar

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes(
                'Main-Class': project.mainClassName
        )
    }
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
}
task dist(type: GradleBuild) {
    buildName "dist"
    startParameter.projectProperties = gradle.startParameter.projectProperties
    tasks = ['clean', 'createRuntime', 'jar']
}

assemble.dependsOn dist